# lar-car-proj

./: .gitignore  Installation.md  ProjectHome.md
decision_making/: CMakeLists.txt  package.xml
decision_making/src/: SimpleGUI.cpp  SimpleGUI.h  heightmap.cpp  heightmap.h  main.cpp  main.py
flea3ros/: CMakeLists.txt
flea3ros/src/: AsyncTriggerEx.cpp  GigEGrabEx.cpp  createMovie.cpp  createMovie2.cpp  flea3ros.cpp
global_path_planning/: CMakeLists.txt  package.xml
global_path_planning/src/: client_test.py  global_path_planner.py  gps_calculator.py  url_search.py
google_map_coordinates/: CMakeLists.txt  CMakeLists.txt~  package.xml
google_map_coordinates/django/: Install_Django.sh  crashTest.html  map.html  map.html~  settings.py  views.py
google_map_coordinates/django/django_projects/mysite/googleMapPy/: urls.py
google_map_coordinates/django/django_projects/mysite/mysite/: urls.py
google_map_coordinates/src/: GUI.py  coor_client.py  coor_client.py~  coor_service.py  coor_service.py~  master.py  menu.py
google_map_coordinates/srv/: Coordinates.srv  Coordinates.srv~
hll/: CMakeLists.txt  package.xml
hll/src/: flc.py
lar_car/: CMakeLists.txt  package.xml
lar_car/launch/: all_packages.launch  lar_car.launch
lar_car/models/FLEA3/: model.sdf
lar_car/models/FLEA3_L/: model.sdf  model.sdf~
lar_car/models/FLEA3_R/: model.sdf  model.sdf~
lar_car/models/drc_vehicle/: model.sdf  model.sdf~
lar_car/models/drivingVic/: model.config  model.sdf  model.sdf~
lar_car/plugins_data/: DRCVehiclePlugin.cc  DRCVehicleROSPlugin.cpp
lar_car/src/: .old.ROS_interface.py  GUI.py  GUI.py~  ROS_interface.py  ROS_interface.py~  map.html  master.py  menu.py  way_map.py
lar_car/src/joystick_teleop/: joystick_input_control.py  joystick_ros_teleop.py
lar_car/worlds/: terrain.world  terrain.world~
lar_car_gui/: CMakeLists.txt  Q.xml  package.xml
lar_car_gui/src/: heightmap.cpp  main.cpp  record_test.py
lar_msgs/: CMakeLists.txt  package.xml
lar_msgs/msg/: MapCell.msg
local_path_planning/: CMakeLists.txt  package.xml
local_path_planning/src/: ImageProc.py  Point2Point.py  RC.py  path_planning.py  run_script.sh
localization/: CMakeLists.txt  CMakeLists.txt~  package.xml
localization/msg/: GpsSpeed.msg
localization/src/: #main.cpp#  GPS2file.h  ekf_class.cpp  ekf_class.h  ekf_class.h~  gps_calculator.h  helpermath.h  main.cpp  noiseless_estimator.cpp  noiseless_estimator.h  noiseless_estimator.h~
localization/src/userHelperFunction/: coordinateTransformations.h  coordinateTransformations.h~  example.cpp~  test.cpp~
lowlevelcontrol/: CMakeLists.txt  package.xml
lowlevelcontrol/src/: low_level_control.py  motorControl.py  motorGUIcontroller.py  ros_interface.py  stringBufferHandler.py
lowlevelcontrol/src/temp/: aux_func.py  joystick_controll.py  master.py
roadDetection/: CMakeLists.txt  package.xml
roadDetection/src/: listener.cpp
roadDetection/src/displayImage/: DisplayImage.cpp  DisplayImage.h
road_detection/: CMakeLists.txt  package.xml
road_detection/src/: listener.cpp  road_detection.cpp
road_detection/src/displayImage/: DisplayImage.cpp  DisplayImage.h  entropy.h  myEntropyLib.h
scripts/: google_map_server.sh  google_map_server.sh~  localization.sh  lpp.sh  road_det.sh  run_all.sh  run_script_test.py  stereo.sh  stereo_package.sh
shadow_removal/: CMakeLists.txt  package.xml
shadow_removal/src/: shadow.cpp
shadow_removal/src/s_removal/: s_removal.cpp  s_removal.h
stereo_package/: CMakeLists.txt  CMakeLists.txt~  Notes.txt~  package.xml  package.xml~
stereo_package/src/: heightmap.cpp  heightmap.cpp~  heightmap.h  heightmap.h~  main.cpp  main.cpp~  stereo.h  stereo.h~
stereo_package/src/component/: ComponentMain.cpp~  ComponentMain.h~  heightmap.cpp~  heightmap.h~  heightmap_projection.cpp~  heightmap_projection.h~  helpermath.cpp~  stereo.h~
stereo_package/src/component/mapper/: mapper.cpp~  mapper.h~
